--- a/vercel.json
+++ b/vercel.json
@@ -12,9 +12,6 @@
     }
   ],
   "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/index.html"
-    }
+    {"src": "/(.*)","dest": "/index.html"}
   ]
 }
