--- a/package.json
+++ b/package.json
@@ -80,7 +80,7 @@
 
     
 
-  "react-router-dom": "^6.30.1",
+  "react-router-dom": "^7.8.2",
   
 
     
@@ -106,7 +106,7 @@
 
     
 
-  "build": "CI=false react-scripts build",
+  "build": " cross-env CI=false react-scripts build",
   
 
     
