--- a/vercel.json
+++ b/vercel.json
@@ -12,6 +12,9 @@
     }
   ],
   "routes": [
-    {"src": "/(.*)","dest": "/index.html"}
+    {
+      "src": "/(.*)",
+      "dest": "/index.html"
+    }
   ]
 }
