--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "lunexa-web",
   "version": "0.1.0",
   "private": true,
+  "homepage": ".",
   "dependencies": {
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.7.0",
